[package]
name = "v_frame"
version = "0.3.7"
description = "Video Frame data structures, originally part of rav1e"
license = "BSD-2-Clause"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2021"
repository = "https://github.com/rust-av/v_frame"

[features]
serialize = ["serde"]
wasm = ["wasm-bindgen"]
tracing = [
  "profiling/profile-with-tracing",
  "dep:tracing"
]

[dependencies]
cfg-if = "1.0"
num-traits = "0.2"
num-derive = "0.4"
noop_proc_macro = "0.3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.63", optional = true }
profiling = { version = "1" }
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
