[package]
name = "v_frame"
version = "0.3.7"
description = "Video Frame data structures, originally part of rav1e"
license = "BSD-2-Clause"
authors = ["Luca Barbato <lu_zero@gentoo.org>"]
edition = "2021"
repository = "https://github.com/rust-av/v_frame"

[features]
serialize = ["serde", "aligned-vec/serde"]
tracing = [
  "profiling/profile-with-tracing",
  "dep:tracing"
]

[dependencies]
cfg-if = "1.0"
num-traits = "0.2"
num-derive = "0.4"
noop_proc_macro = "0.3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
profiling = { version = "1" }
tracing = { version = "0.1.40", optional = true }
aligned-vec = "0.5.0"

# Note: We need to differentiate between wasm32-unknown-unknown and
# wasm32-wasi. cfg(target_arch = "wasm32") will match both.

# We need to disable the default "rayon" feature on wasm32.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
criterion = { version = "0.5", default-features = false }

# wasm-bindgen is needed for wasm32-unknown-unknown, but not
# for wasm32-wasi.
[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"

[[bench]]
name = "bench"
harness = false
