[package]
name = "v_frame"
version = "0.4.0"
rust-version = "1.85.0"
description = "Video Frame data structures, originally part of rav1e"
license = "BSD-2-Clause"
edition = "2024"
repository = "https://github.com/rust-av/v_frame"
include = ["Cargo.toml", "README.md", "LICENSE", "src"]

[dependencies]
aligned-vec = "0.6.4"
num-traits = "0.2.19"
thiserror = "2.0.17"

[features]
padding_api = []

# Non-WASM targets use criterion with all default features (including rayon)
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.6"

#
# WebAssembly/wasm32 target support below
#
# There are two main WASM targets:
# - wasm32-unknown-unknown: Base WebAssembly standard, used in browsers
# - wasm32-wasi: Newer extension/standard, comes with basic std library,
#   not supported in browsers (yet)
#
# Some things work in all WASM configurations, some work only on one of these two,
# some things don't work on wasm32 at all.
#
# wasm32-unknown-unknown requires wasm_bindgen and wasm_bindgen_test to work,
# but these can cause problems on wasm32-wasi. So we use either
# - target_arch = "wasm32" for things that (don't) work on all WebAssembly targets or
# - explicit targetting for wasm32-unknown-unknown or wasm32-wasi.
#   In Cargo.toml, this is done via [target.<target-triple>.dependencies]
#   In code, this is done via cfg(all(target_arch = "wasm32", target_os = "wasi"/"unknown"))
# wasm-bindgen is only needed for wasm32-unknown-unknown and not other wasm32 targets
[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"
# Disable rayon feature for WASM compatibility
criterion = { version = "0.6", default-features = false, features = [
    "plotters",
    "cargo_bench_support",
] }

[target.wasm32-wasi.dev-dependencies]
# Disable rayon feature for WASM compatibility
criterion = { version = "0.6", default-features = false, features = [
    "plotters",
    "cargo_bench_support",
] }

[[bench]]
name = "plane"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# Performance
clear_with_drain = "warn"
format_collect = "warn"
format_push_string = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
inline_always = "warn"
iter_with_drain = "warn"
large_include_file = "warn"
large_types_passed_by_value = "warn"
linkedlist = "deny"
missing_inline_in_public_items = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_collect = "warn"
needless_pass_by_value = "warn"
non_std_lazy_statics = "warn"
non_zero_suggestions = "warn"
or_fun_call = "warn"
rc_buffer = "warn"
redundant_clone = "warn"
ref_option = "warn"
set_contains_or_insert = "warn"
stable_sort_primitive = "warn"
string_lit_chars_any = "warn"
suboptimal_flops = "warn"
trivial_regex = "warn"
trivially_copy_pass_by_ref = "warn"
unnecessary_box_returns = "warn"
unnecessary_join = "warn"
unused_async = "warn"
verbose_file_reads = "warn"
# Readability/Code Intention
allow_attributes = "warn"
checked_conversions = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
enum_glob_use = "warn"
equatable_if_let = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
invalid_upcast_comparisons = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
map_with_unused_argument_over_ranges = "warn"
match_bool = "warn"
mod_module_files = "warn"
needless_continue = "warn"
needless_pass_by_ref_mut = "warn"
option_as_ref_cloned = "warn"
option_if_let_else = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_test_prefix = "warn"
ref_option_ref = "warn"
semicolon_if_nothing_returned = "warn"
tests_outside_test_module = "warn"
transmute_ptr_to_ptr = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
verbose_bit_mask = "warn"
zero_sized_map_values = "warn"
# Correctness/Safety
case_sensitive_file_extension_comparisons = "warn"
cfg_not_test = "deny"
collection_is_never_read = "warn"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "deny"
expl_impl_clone_on_copy = "deny"
filetype_is_file = "warn"
future_not_send = "warn"
ignore_without_reason = "warn"
infinite_loop = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_stack_frames = "warn"
manual_midpoint = "warn"
maybe_infinite_iter = "warn"
mem_forget = "warn"
mismatching_type_param_order = "warn"
mixed_read_write_in_expression = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
non_send_fields_in_send_ty = "deny"
path_buf_push_overwrite = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
significant_drop_in_scrutinee = "deny"
str_split_at_newline = "warn"
string_slice = "warn"
suspicious_operation_groupings = "warn"
suspicious_xor_used_as_pow = "warn"
transmute_undefined_repr = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_debug_formatting = "warn"
unwrap_used = "warn"
# Documentation
doc_link_with_quotes = "warn"
doc_markdown = "warn"
missing_errors_doc = "warn"
missing_safety_doc = "warn"
# Annoyances
uninlined_format_args = "allow"
